k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storevault-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storevault-app
  template:
    metadata:
      labels:
        app: storevault-app
    spec:
      containers:
      - name: storevault-container
        image: 435240837203.dkr.ecr.ap-south-1.amazonaws.com/storevault:32
