k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storevault-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: storevault-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
